--- a/NewsLater/Base.lproj/Main.storyboard
+++ b/NewsLater/Base.lproj/Main.storyboard
@@ -340,11 +340,47 @@
                                 <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="article_cell" id="dbu-sS-XvW">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="article_cell" rowHeight="86" id="e68-ZA-UYx" customClass="ArticleTableViewCell" customModule="NewsLater" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="dbu-sS-XvW" id="Jfo-MV-lVI">
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="e68-ZA-UYx" id="HP2-00-4UN">
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Screen Shot 2015-02-17 at 7.13.17 AM.png" translatesAutoresizingMaskIntoConstraints="NO" id="zep-Vo-fGf">
+                                                    <rect key="frame" x="23" y="4" width="122" height="77"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Subtitle" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ULt-kl-f2f">
+                                                    <rect key="frame" x="196" y="49" width="42" height="14"/>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
+                                                    <color key="textColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Title" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ON8-3U-9aA">
+                                                    <rect key="frame" x="196" y="8" width="42" height="28"/>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="ULt-kl-f2f" secondAttribute="trailing" constant="362" placeholder="YES" id="8Aw-yI-84W"/>
+                                                <constraint firstItem="zep-Vo-fGf" firstAttribute="top" secondItem="HP2-00-4UN" secondAttribute="top" constant="4" placeholder="YES" id="K4o-J9-Ojk"/>
+                                                <constraint firstItem="ULt-kl-f2f" firstAttribute="leading" secondItem="HP2-00-4UN" secondAttribute="leading" constant="196" placeholder="YES" id="SSp-Tg-1zb"/>
+                                                <constraint firstAttribute="bottom" secondItem="zep-Vo-fGf" secondAttribute="bottom" constant="4" placeholder="YES" id="aiu-0Z-AMt"/>
+                                                <constraint firstItem="ON8-3U-9aA" firstAttribute="leading" secondItem="zep-Vo-fGf" secondAttribute="trailing" constant="51" placeholder="YES" id="aki-Hd-q7O"/>
+                                                <constraint firstAttribute="bottom" secondItem="ULt-kl-f2f" secondAttribute="bottom" constant="22" placeholder="YES" id="bhX-Lj-fx1"/>
+                                                <constraint firstItem="ULt-kl-f2f" firstAttribute="top" secondItem="ON8-3U-9aA" secondAttribute="bottom" constant="13" placeholder="YES" id="fMx-cy-5Yc"/>
+                                                <constraint firstItem="zep-Vo-fGf" firstAttribute="leading" secondItem="HP2-00-4UN" secondAttribute="leading" constant="23" placeholder="YES" id="jaT-4z-NW3"/>
+                                                <constraint firstAttribute="trailing" secondItem="zep-Vo-fGf" secondAttribute="trailing" constant="455" placeholder="YES" id="lPc-OF-gac"/>
+                                                <constraint firstAttribute="trailing" secondItem="ON8-3U-9aA" secondAttribute="trailing" constant="362" placeholder="YES" id="upx-0k-dPc"/>
+                                                <constraint firstItem="ON8-3U-9aA" firstAttribute="top" secondItem="HP2-00-4UN" secondAttribute="top" constant="8" placeholder="YES" id="yBH-8p-dl9"/>
+                                            </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="subtitle" destination="ULt-kl-f2f" id="Ov1-mA-3sq"/>
+                                            <outlet property="thumbnail" destination="zep-Vo-fGf" id="I9q-ot-bA3"/>
+                                            <outlet property="title" destination="ON8-3U-9aA" id="GuA-k9-JMO"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
@@ -366,6 +402,9 @@
                             </mask>
                         </variation>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="btm-lG-mzH" id="57a-UG-VpO"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TMo-Rp-etN" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="vu9-F8-Qgc" userLabel="Exit" sceneMemberID="exit"/>
