--- a/NewsLater/Base.lproj/Main.storyboard
+++ b/NewsLater/Base.lproj/Main.storyboard
@@ -26,7 +26,7 @@
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="o9b-Se-GbC" id="7lF-82-hCc">
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Screen Shot 2015-02-17 at 7.13.17 AM.png" translatesAutoresizingMaskIntoConstraints="NO" id="e5q-C7-15m">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Screen Shot 2015-02-17 at 7.13.17 AM.png" translatesAutoresizingMaskIntoConstraints="NO" id="e5q-C7-15m">
                                                     <rect key="frame" x="23" y="4" width="122" height="77"/>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Subtitle" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U2n-fh-B11">
@@ -340,7 +340,7 @@
                                 <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="article_cell" rowHeight="86" id="e68-ZA-UYx" customClass="ArticleTableViewCell" customModule="NewsLater" customModuleProvider="target">
+                                    <tableViewCell contentMode="scaleAspectFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="article_cell" rowHeight="86" id="e68-ZA-UYx" customClass="ArticleTableViewCell" customModule="NewsLater" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="e68-ZA-UYx" id="HP2-00-4UN">
@@ -404,6 +404,8 @@
                     </view>
                     <connections>
                         <outlet property="tableView" destination="btm-lG-mzH" id="57a-UG-VpO"/>
+                        <segue destination="LAI-zI-d0b" kind="show" identifier="historyToArticle" id="2Ua-h4-bQX"/>
+                        <segue destination="vu9-F8-Qgc" kind="unwind" identifier="returnToHistory" unwindAction="returnToHistory:" id="tce-OS-wRD"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TMo-Rp-etN" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -440,7 +442,7 @@
                                     <navigationItem title="Title" id="FUf-1y-iVo">
                                         <barButtonItem key="leftBarButtonItem" title="Back" id="C34-nz-UVE">
                                             <connections>
-                                                <segue destination="hz0-aR-eLa" kind="unwind" unwindAction="returnToFeed:" id="XSF-yv-pRJ"/>
+                                                <action selector="back:" destination="LAI-zI-d0b" id="lH6-yg-dnx"/>
                                             </connections>
                                         </barButtonItem>
                                         <barButtonItem key="rightBarButtonItem" systemItem="action" id="UFF-Ha-qBl">
@@ -471,6 +473,8 @@
                     <connections>
                         <outlet property="articleNavBar" destination="FUf-1y-iVo" id="lwT-AR-B6v"/>
                         <outlet property="articleWebView" destination="aCz-0B-dgd" id="9UL-G0-fkN"/>
+                        <segue destination="hz0-aR-eLa" kind="unwind" identifier="articleToFeed" unwindAction="returnToFeed:" id="Kxp-Cb-CZK"/>
+                        <segue destination="hz0-aR-eLa" kind="unwind" identifier="articleToHistory" unwindAction="returnToHistory:" id="KhE-7g-D40"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="igl-8X-O1H" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -482,4 +486,7 @@
     <resources>
         <image name="Screen Shot 2015-02-17 at 7.13.17 AM.png" width="563" height="524"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="2Ua-h4-bQX"/>
+    </inferredMetricsTieBreakers>
 </document>
